[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/chickens/pink/down/sprite_2.png" type="Texture" id=1]
[ext_resource path="res://assets/chickens/pink/up/sprite_0.png" type="Texture" id=2]
[ext_resource path="res://assets/chickens/pink/down/sprite_1.png" type="Texture" id=3]
[ext_resource path="res://assets/chickens/pink/down/sprite_0.png" type="Texture" id=4]
[ext_resource path="res://assets/chickens/pink/up/sprite_1.png" type="Texture" id=5]
[ext_resource path="res://assets/chickens/pink/up/sprite_2.png" type="Texture" id=6]
[ext_resource path="res://scripts/Player.gd" type="Script" id=7]
[ext_resource path="res://assets/sons/colide.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sons/ponto.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sons/ganhou.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/chickens/green/up/sprite_1.png" type="Texture" id=11]
[ext_resource path="res://assets/chickens/white/down/sprite_1.png" type="Texture" id=12]
[ext_resource path="res://assets/chickens/white/down/sprite_0.png" type="Texture" id=13]
[ext_resource path="res://assets/chickens/white/down/sprite_2.png" type="Texture" id=14]
[ext_resource path="res://assets/chickens/green/up/sprite_2.png" type="Texture" id=15]
[ext_resource path="res://assets/chickens/blue/down/sprite_2.png" type="Texture" id=16]
[ext_resource path="res://assets/chickens/white/up/sprite_0.png" type="Texture" id=17]
[ext_resource path="res://assets/chickens/green/up/sprite_0.png" type="Texture" id=18]
[ext_resource path="res://assets/chickens/blue/down/sprite_1.png" type="Texture" id=19]
[ext_resource path="res://assets/chickens/blue/up/sprite_0.png" type="Texture" id=20]
[ext_resource path="res://assets/chickens/green/down/sprite_0.png" type="Texture" id=21]
[ext_resource path="res://assets/chickens/blue/up/sprite_1.png" type="Texture" id=22]
[ext_resource path="res://assets/chickens/blue/up/sprite_2.png" type="Texture" id=23]
[ext_resource path="res://assets/chickens/green/down/sprite_2.png" type="Texture" id=24]
[ext_resource path="res://assets/chickens/white/up/sprite_2.png" type="Texture" id=25]
[ext_resource path="res://assets/chickens/blue/down/sprite_0.png" type="Texture" id=26]
[ext_resource path="res://assets/chickens/green/down/sprite_1.png" type="Texture" id=27]
[ext_resource path="res://assets/chickens/white/up/sprite_1.png" type="Texture" id=28]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 19 ), ExtResource( 16 ) ],
"loop": true,
"name": "blue_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "blue_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 27 ), ExtResource( 24 ) ],
"loop": true,
"name": "green_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 11 ), ExtResource( 15 ) ],
"loop": true,
"name": "green_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "pink_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "pink_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 14 ) ],
"loop": true,
"name": "white_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 28 ), ExtResource( 25 ) ],
"loop": true,
"name": "white_up",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 40.078

[node name="Player" type="Area2D"]
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 7 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "blue_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AudioWin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="AudioPoint" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="AudioColision" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
